--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,188 @@
-$body-color: blue;
+@import 'variables';
+@import 'mixins';
+@import 'navigation';
 
+/* BASIC STYLES */
 body {
-    color: $body-color;
+  font-family: $font-stack;
+  font-size: 1em;
+  line-height: 2em;
+  background: url($bg-image) #FFF repeat-x;
+  margin: 0;
+}
+
+main {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+/* NAVIGATION */
+figure {
+  @include logo(400px, 190px, url($logo-image) no-repeat 0 50px, left, block, 0);
+}
+
+@include nav-style();
+
+/* HEADER */
+header {
+  width: inherit;
+  clear: both;
+  text-align: center;
+  padding-top: 40px;
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  h1 {
+    color: $primary-color;
+    font-weight: 100;
+    font-size: 4em;
+    line-height: 0;
+  }
+
+  h2 {
+    color: #FFF;
+    font-weight: 900;
+    font-size: 2.5em;
+    line-height: 0;
+    margin-bottom: 70px;
+  }
+
+  h3 {
+    color: $secondary-color;
+    font-weight: 400;
+    font-size: 2em;
+    line-height: 0;
+    margin-bottom: 50px;
+  }
+}
+
+/* CONTENT */
+#headline {
+  width: 100%;
+  height: 130px;
+  background: $primary-color;
+  text-align: center;
+  margin: 0 auto;
+
+  h1 {
+    color: #FFF;
+    font-size: 2.5em;
+    font-weight: 100;
+    padding-top: 50px;
+  }
+}
+
+#content {
+  width: 940px;
+  margin: 20px auto;
+
+  h3 {
+    color: $secondary-color;
+    font-size: 2em;
+    font-weight: 400;
+  }
+
+  #products, #testimonials {
+    width: 460px;
+    float: left;
+  }
+
+  #products {
+    img {
+      float: left;
+      margin-right: 20px;
+    }
+
+    article {
+      margin-bottom: 40px;
+
+      h4 {
+        line-height: 1em;
+      }
+    }
+  }
+}
+
+/* FOOTER */
+.greybar {
+  width: 100%;
+  height: 90px;
+  background: #F5F6F6;
+  clear: both;
+  padding-top: 30px;
+}
+
+footer {
+  width: 100%;
+  height: 120px;
+  background: $footer-background-color;
+  text-align: center;
+  color: #FFF;
+  padding-top: 50px;
+
+  .social-media {
+    margin: 0 auto;
+    width: 165px;
+
+    div {
+      float: left;
+      margin-right: 5px;
+
+      a {
+        display: block;
+        width: 36px;
+        height: 36px;
+        text-indent: -9999px;
+      }
+    }
+
+    .one { background: url($social-media-icon) 0 0; }
+    .two { background: url($social-media-icon) -38px 0; }
+    .three { background: url($social-media-icon) -76px 0; }
+    .four { background: url($social-media-icon) -114px 0; }
+  }
+}
+
+/* MEDIA QUERIES */
+@include respond-to(medium) {
+    main { width: 768px; }
+    figure { width: inherit; height: 140px; float: none; background-position: center; }
+    nav { width: inherit; height: 50px; float: none; text-align: center; }
+    nav ul { margin-top: 0; }
+    nav ul li { font-size: 1em; margin: 0 10px; }
+    header h1 { font-size: 3em; }
+    header h2 { font-size: 1.5em; }
+    #content { width: inherit; }
+    #content #products, #content #testimonials { width: 46%; margin: 0 2%; }
+}  
+
+@include respond-to(small) {
+  main { width: 460px; }
+  nav ul li { font-size: 0.8em; margin: 0 5px; }
+  header h1 { font-size: 2em; }
+  header h2 { font-size: 1em; }
+  header img { margin-bottom: 100px; }
+  header h3 { font-size: 1.5em; }
+  #headline h1 { font-size: 2em; padding-top: 50px; }
+  #content #products, #content #testimonials { width: 96%; margin: 0 2%; float: none; }
+}
+
+@include respond-to(x-small) {
+  main { width: 300px; }
+  figure { background-size: contain; height: 100px; }
+  nav { margin-bottom: 40px !important; }
+  select { width: 95%; }
+  #headline h1 { font-size: 1.5em; padding-top: 30px; }
+  header img { margin-bottom: 80px; }
+  header h1:first-child { font-size: 1.4em; margin-bottom: 20px; }
+  header h2 { font-size: 1.4em; }
+  header h3 { color: #FFF; font-size: 1em; }
+  #content h3 { font-size: 1.6em; }
+  .greybar, article img { display: none; }
+  footer { text-align: center; }
+  footer p, footer img { float: none; margin: 0; }
 }
